fix table alignment for all tables on trade

--- a/src/components/Trade/TradeTabs/Ranges/Ranges.module.css
+++ b/src/components/Trade/TradeTabs/Ranges/Ranges.module.css
@@ -102,6 +102,7 @@
     width: 100%;
 
     padding: 0.5em 0.4em;
+    vertical-align: middle;
 }
 
 /* } */
